[package]
name = "im"
version = "4.0.1"
authors = ["Bodil Stokke <bodil@bodil.org>"]
license = "LGPL-3.0+"
description = "Assorted immutable collection datatypes"
repository = "https://github.com/bodil/im-rs"
documentation = "https://docs.rs/im/"
readme = "README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent"]

[badges]
travis-ci = { repository = "bodil/im-rs" }

[dependencies]
thunk = { version = "0.3.0", optional = true }
quickcheck = { version = "0.4.1", optional = true }

[dev-dependencies]
thunk = "0.3.0"
quickcheck = "0.4.1"
